--- a/exercise1_Park.html
+++ b/exercise1_Park.html
@@ -7,4 +7,18 @@
 <p id ='text'> Javascript DOM :: Changing paragraph style</p> <div>
     <button id="style" onclick="js_new_style()">New style</button> </div>
 </body>
+<script>
+    function js_new_style(){
+
+        if (document.getElementById("style").innerText == "New style") {
+            document.getElementById("text").style.color = "blue";
+            document.getElementById("style").innerHTML = "Previous style"
+        }
+        else{
+            document.getElementById("style").innerHTML = "New style"
+            document.getElementById("text").style.color = defaultStatus;
+        }
+    }
+</script>
+
 </html>
